localstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: social-network-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:latest
          ports:
            - containerPort: 4566
---
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: social-network-db
spec:
  selector:
    app: localstack
  ports:
    - port: 4566
      targetPort: 4566
